<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v2"
    android:scaleType="centerCrop"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/header_padding">

         <TextView
            style="@style/descriptionStyle"
            android:text="@string/subscriptionDescription" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_monthly"
            style="@style/monthlyYearlyButton"
            android:background="@color/category_blue"
            android:text="@string/monthly_subscript" />

        <Button
            android:id="@+id/button_yearly"
            style="@style/monthlyYearlyButton"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/category_orange"
            android:text="@string/yearly_subscript" />

    </RelativeLayout>

</RelativeLayout>

